--- a/templates/index2.html
+++ b/templates/index2.html
@@ -10,14 +10,19 @@
     <link href="static/estilos.css" rel="stylesheet">
 </head>
 <body>
-    <h1>BROACHING ANALYSIS</h1>
+
+
+
+    <div class="container">
+    <div class="table-container">
+        <div class="header-container">
+        <h1>BROACHING ANALYSIS</h1>
+    </div>
 
 
     <div id="numero de brochado">
-        <h2>Broaching stroke: {{ diente }}</h2>
+        <h2>BROACHING STROKE: {{ diente }}</h2>
     </div>
-
-    <div class="table-container">
         <table class="minimalistBlack">
             <thead>
                 <tr>
@@ -90,13 +95,40 @@
 
 
     <div class="image-container">
-    <div class="image">
-        <img src="{{ url_for('static', filename='TorqueCompleto_UTK68.png') }}" alt="Mi Imagen">
+        <div class="image-row">
+        <div class="image">
+            <img src="{{ url_for('static', filename='TorqueCompleto_3.png') }}" alt="Mi Imagen">
+        </div>
+        <div class="image2">
+            <img src="{{ url_for('static', filename='Violin3.png') }}" alt="Mi Imagen 2">
+        </div>
+        </div>
+        <div class="image-row">
+            {% if desgaste_guia %}
+            <div class="image3">
+                <img src="{{ url_for('static', filename='desgaste_graficar.png') }}" alt="Desgaste">
+            </div>
+            {% else %}
+            <div class="image4">
+                <img src="{{ url_for('static', filename='rotura_diente.png') }}" alt="Rotura">
+            </div>
+            {% endif %}
+        </div>
     </div>
-    <div class="image">
-        <img src="{{ url_for('static', filename='ViolinUTK68.png') }}" alt="Mi Imagen 2">
     </div>
+
+    <div class="logos-container">
+    <img src="{{ url_for('static', filename='logo_cfaa.jpg') }}" alt="Logo Izquierdo" class="logo-left">
+    <img src="{{ url_for('static', filename='logo_Interq.png') }}" alt="Logo Derecho" class="logo-right">
     </div>
+
+    <footer>
+        <p class="footer-text">Interlinked Process, Product and Data Quality framework for Zero-Defects Manufacturing</p>
+        <img src="{{ url_for('static', filename='eu.png') }}" alt="Logo Derecho" class="footer-logo">
+        <p class="footer-text2">This project has received funding from the European Union’s Horizon 2020 Research and Innovation.
+        Programme under grant agreement No. 958357 and it is an initiative of the Factories-of-the-Future (FoF)
+        Public Private Partnership.</p>
+    </footer>
 
 
 
