--- a/static/estilosIndex.css
+++ b/static/estilosIndex.css
@@ -1,16 +1,27 @@
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+
 /* Estilos para el formulario de parámetros */
 .form-container {
-    max-width: 800px;
+    max-width: 500px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 15px;
     background-color: #FFFFFF;
     text-align: center;
 }
 
 .form-container h1 {
-    font-size: 28px;
+    font-size: 19px;
     font-weight: bold;
-    color: #085FBB;
+    color: #003772;
+    margin-top: 25px;
+    margin-bottom: 15px;
 }
 
 .form-container p {
@@ -33,13 +44,51 @@
 }
 
 .form-container button {
-    background-color: #085FBB;
+    background-color: #003772;
     color: #FFFFFF;
     padding: 10px 20px;
     border: none;
     font-weight: bold;
     cursor: pointer;
+    margin-top: 12px;
 }
+
+/* Estilos para el contenedor del encabezado */
+.header-container {
+    max-width: 100%;
+    padding: 10px 0; /* Agrega espacios de 60px a la izquierda y derecha */
+    display: flex;
+    justify-content: space-between; /* Distribuye los elementos horizontalmente */
+    align-items: center; /* Alinea verticalmente los elementos */
+    background-color: #FFFFFF;
+    text-align: center;
+    position: relative; /* Para posicionar los elementos internos */
+}
+
+/* Estilo para el título */
+.header-container h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #000000;
+    margin: 0 auto; /* Sin espacio arriba y abajo del título */
+    justify-content: center;
+}
+
+/* Estilo para los logos */
+.logo-left {
+    max-width: 165px; /* Tamaño cuadrado de 100x100px */
+    height: auto;
+    margin-left: 10px;
+}
+
+.logo-right {
+    max-width: 165px; /* Tamaño cuadrado de 100x100px */
+    height: auto;
+    margin-right: 10px;
+}
+
+
+
 
 /* Estilo para el mensaje */
 #mensaje {
@@ -47,3 +96,42 @@
     font-size: 16px;
     margin-top: 10px;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    background-color: #3B3B37;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+
+.footer-text {
+    font-size: 10px;
+    max-width: calc(100% - 60px); /* Adjust the max-width to leave space for the logo */
+    white-space: nowrap;
+    text-align: left; /* Align text to the left */
+    margin-right: 10px; /* Add some right margin for spacing */
+    margin-top: 15px;
+}
+
+.footer-logo {
+    max-width: 40px;
+    height: auto;
+    margin-left: 300px;
+    margin-right: 20px;
+}
+
+.footer-text2 {
+    font-size: 10px;
+    max-width: calc(100% - 90px); /* Adjust the max-width to leave space for the logo and additional margin */
+    white-space: normal; /* Allow text to wrap to the next line */
+    text-align: left; /* Align text to the left */
+    margin-right: 10px; /* Add some right margin for spacing */
+    margin-top: 15px;
+}
+
